--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,13 +1,107 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,600;1,700;1,800;1,900&display=swap");
+
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+	font-family: "Nunito-Sans", sans-serif;
+}
+
+:root {
+	/* --theme-color: #3498db; */
+	/* --theme-color: #4f47b3; */
+	--theme-color: #2aa2a7;
+	--theme-background: #dde1e7;
+}
+
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+	/* background: -webkit-linear-gradient(to right, #eef2f3, #8e9eab);
+	background: linear-gradient(
+		to right,
+		#eef2f3,
+		#8e9eab
+	); */
+	background: var(--theme-background);
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+	font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
+}
+
+.heading {
+	color: #2b2b2b;
+	font-family: "Lato", sans-serif;
+	font-size: 2.4em;
+	margin-top: 70px;
+	margin-bottom: 30px;
+	text-shadow: -3px -3px 7px #ffffff73, 2px 2px 5px rgba(94, 104, 121, 0.288);
+}
+
+.upload_image {
+	color: #2b2b2b;
+	font-family: "Nunito Sans", sans-serif;
+	margin-top: 40px;
+	margin-bottom: 30px;
+	font-size: 1.4em;
+	text-shadow: -3px -3px 7px #ffffff73, 2px 2px 5px rgba(94, 104, 121, 0.288);
+}
+
+.img_display {
+	margin-top: 15px;
+	margin-bottom: 30px;
+	border-radius: 4px;
+}
+
+.on_eth_block {
+	color: #2b2b2b;
+	font-family: "Nunito Sans", sans-serif;
+	font-size: 1.1em;
+}
+
+.link {
+	color: var(--theme-color);
+}
+
+input::-webkit-file-upload-button {
+	border: none !important;
+	outline: none !important;
+	border-radius: 5px;
+	background: var(--theme-color);
+	margin-right: 15px;
+	color: var(--theme-background);
+	padding: 7px 15px 7px 15px;
+	box-shadow: -3px -3px 3px var(--theme-background), 2px 2px 7px rgba(94, 104, 121, 0.288);
+}
+
+input::-webkit-file-upload-button:hover {
+	cursor: pointer;
+	box-shadow: 2px 2px 4px 0px rgba(255, 255, 255, 0.5), -2px -2px 4px 0px rgba(116, 125, 136, 0.2),
+		inset -2px -2px 4px 0px rgba(255, 255, 255, 0.3), inset 2px 2px 4px 0px rgba(116, 125, 136, 0.3);
+}
+
+.button_style {
+	background: var(--theme-color);
+	color: var(--theme-background);
+	padding: 7px 15px 7px 15px;
+	box-shadow: -3px -3px 3px var(--theme-background), 2px 2px 7px rgba(94, 104, 121, 0.288);
+}
+
+.button_style:hover {
+	color: var(--theme-background);
+	box-shadow: 2px 2px 4px 0px rgba(255, 255, 255, 0.5), -2px -2px 4px 0px rgba(116, 125, 136, 0.2),
+		inset -2px -2px 4px 0px rgba(255, 255, 255, 0.3), inset 2px 2px 4px 0px rgba(116, 125, 136, 0.3);
+}
+
+input {
+	border: none !important;
+	outline: none !important;
+	color: #2b2b2b;
+	font-family: "Nunito Sans", sans-serif;
+}
+
+input:focus {
+	border: none !important;
+	outline: none !important;
 }
